--- a/gptgame.ini
+++ b/gptgame.ini
@@ -2,12 +2,10 @@
 DiscordKey = PUT_YOUR_API_KEY_HERE
 
 [api.settings]
-DeepAI_GPT2 = yes
-GPT4Free_GPT3.5 = no
-OpenAI_GPT3 = no
+API = none
 
 [difficulty.settings]
-NoOfTransformations = 2
+NoOfTransformations = 1
 NoOfWords = 5
 MayContainCaseInsens = yes
 MayContainCaseSens = no
